Publications: increase border-to-text gap to 0.5rem; fix bib entry
- Increase padding-left from 0.4rem to 0.5rem in _publications.scss
- Fix author name Kristzin Thomas → Tamas in papers.bib
- Remove SJPE Best Paper note from papers.bib

--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -57,7 +57,7 @@
       }
 
       div[class^="col-"] {
-        padding-left: 0.4rem;
+        padding-left: 0.5rem;
         padding-right: 0;
       }
 
